예외처리작업 전까지 내용

--- a/app/src/main/res/layout/cartlist_item.xml
+++ b/app/src/main/res/layout/cartlist_item.xml
@@ -9,14 +9,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/list_bg">
+        android:paddingHorizontal="20dp"
+        android:background="@drawable/box">
 
         <ImageView
             android:id="@+id/cartItemImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginRight="10dp"
             android:layout_marginVertical="3dp"
+            android:layout_gravity="center_vertical"
             app:srcCompat="@drawable/cart_img" />
 
         <LinearLayout
@@ -80,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
                 android:textSize="14sp"
                 android:inputType="textPersonName"
                 android:text="URL"
@@ -95,36 +98,27 @@
         android:layout_marginBottom="5dp"
         android:visibility="gone">
 
-        <TextView
+
+        <ImageView
             android:id="@+id/changeCartItem"
-            android:background="@drawable/listitem_btn_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingVertical="10dp"
-            android:gravity="center"
-            android:text="변경" />
+            app:srcCompat="@drawable/update_btn" />
 
-        <TextView
+        <ImageView
             android:id="@+id/deleteCartItem"
-            android:background="@drawable/listitem_btn_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingVertical="10dp"
-            android:layout_marginHorizontal="10dp"
-            android:gravity="center"
-            android:text="제거" />
+            app:srcCompat="@drawable/delete_btn" />
 
-        <TextView
+        <ImageView
             android:id="@+id/goCartItemUrl"
-            android:background="@drawable/listitem_btn_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingVertical="10dp"
-            android:gravity="center"
-            android:text="사이트 이동" />
+            app:srcCompat="@drawable/url_btn" />
     </LinearLayout>
 
 </LinearLayout>
