--- a/app/src/main/res/drawable/clothes_item_select.xml
+++ b/app/src/main/res/drawable/clothes_item_select.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:width="1dp"
-        android:color="#777882"/>
-
-    <corners android:radius="5dp" />
-
-
-
-
+    <stroke android:width="5dp"/>
 
 </shape>
