--- a/app/src/main/res/drawable/my_info_form.xml
+++ b/app/src/main/res/drawable/my_info_form.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke android:width="1dp"
-        android:color="#BFBFBF"/>
+        android:color="#CACACA"/>
 
     <corners android:radius="30dp" />
 
