--- a/app/src/main/res/drawable/verification_receive_btn.xml
+++ b/app/src/main/res/drawable/verification_receive_btn.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:width="1dp"
-        android:color="#777882"/>
+    <solid android:color="#E4E4E4" />
 
     <corners android:radius="5dp" />
-
-
-
-
 
 </shape>
