--- a/app/src/main/res/layout/fragment_change_pw.xml
+++ b/app/src/main/res/layout/fragment_change_pw.xml
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="60dp"
         android:paddingHorizontal="30dp"
         android:paddingVertical="20dp"
         android:orientation="vertical">
@@ -223,25 +223,33 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/codeForChangePw"
-                android:background="@drawable/verification_code_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:hint="인증번호를 입력하세요"
                 android:layout_weight="5"
-                android:textSize="13sp"
+                android:background="@drawable/verification_code_form"
                 android:ems="10"
-                android:inputType="numberSigned" />
+                android:hint="인증번호를 입력하세요"
+                android:inputType="numberSigned"
+                android:padding="5dp"
+                android:textSize="13sp" />
 
-            <ImageView
+            <TextView
                 android:id="@+id/receiveCodeForChangePw"
+                android:background="@drawable/verification_receive_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/verification_code_btn" />
+                android:paddingVertical="7dp"
+                android:layout_marginLeft="10dp"
+                android:paddingHorizontal="15dp"
+                android:text="인증번호 받기"
+                android:textSize="10sp"
+                android:textColor="#4E4E4E"
+                android:clickable="true"/>
 
         </LinearLayout>
 
