--- a/app/src/main/res/layout/fragment_mypage_settings.xml
+++ b/app/src/main/res/layout/fragment_mypage_settings.xml
@@ -79,7 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:srcCompat="@drawable/line" />
+        app:srcCompat="@drawable/long_line" />
 
     <TextView
         android:id="@+id/textView36"
@@ -116,7 +116,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:srcCompat="@drawable/line" />
+        app:srcCompat="@drawable/long_line" />
 
     <TextView
         android:id="@+id/textView38"
@@ -140,7 +140,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="13sp"
@@ -150,7 +150,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="13sp"
@@ -160,7 +160,7 @@
         android:id="@+id/changePwBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="13sp"
@@ -170,7 +170,7 @@
         android:id="@+id/logoutBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="13sp"
@@ -180,7 +180,7 @@
         android:id="@+id/withdrawalBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="13sp"
