회원가입 예외처리

--- a/app/src/main/res/layout/activity_sign_up_verification.xml
+++ b/app/src/main/res/layout/activity_sign_up_verification.xml
@@ -42,6 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="휴대전화"
+                    android:letterSpacing="-0.1"
                     android:textSize="12sp"/>
 
                 <LinearLayout
@@ -60,13 +61,20 @@
                         android:padding="5dp"
                         android:textSize="14sp" />
 
-                    <ImageView
+                    <TextView
                         android:id="@+id/receiveCodeBtnForRegister"
+                        android:background="@drawable/verification_receive_btn_signup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/verification_code_btn" />
-
+                        android:paddingVertical="8dp"
+                        android:layout_marginLeft="10dp"
+                        android:paddingHorizontal="15dp"
+                        android:text="인증번호 받기"
+                        android:textSize="10sp"
+                        android:textColor="#ffffff"
+                        android:letterSpacing="-0.1"
+                        android:clickable="true"/>
 
                 </LinearLayout>
 
@@ -75,10 +83,12 @@
                     android:background="@drawable/verification_code_form"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:padding="5dp"
                     android:hint="인증번호를 입력하세요"
                     android:textSize="14sp"
                     android:ems="10"
+                    android:letterSpacing="-0.1"
                     android:inputType="numberSigned" />
 
             </LinearLayout>
