메인 화면 수정 전

--- a/app/src/main/res/layout/activity_profile_image.xml
+++ b/app/src/main/res/layout/activity_profile_image.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginHorizontal="120dp"
+            android:layout_marginTop="100dp"
             app:srcCompat="@drawable/logo_image" />
 
         <de.hdodenhof.circleimageview.CircleImageView
