--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -18,6 +18,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="120dp"
+            android:layout_marginTop="100dp"
             android:layout_marginHorizontal="120dp"
             app:srcCompat="@drawable/logo_image" />
 
@@ -83,13 +84,19 @@
                     android:padding="5dp"
                     android:textSize="14sp" />
 
-                <ImageView
+                <TextView
                     android:id="@+id/receiveCodeBtn"
+                    android:background="@drawable/verification_receive_btn_signup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/verification_code_btn" />
-
+                    android:paddingVertical="8dp"
+                    android:layout_marginLeft="10dp"
+                    android:paddingHorizontal="15dp"
+                    android:text="인증번호 받기"
+                    android:textSize="10sp"
+                    android:textColor="#ffffff"
+                    android:clickable="true"/>
 
             </LinearLayout>
 
@@ -99,6 +106,7 @@
                 android:background="@drawable/verification_code_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:hint="인증번호를 입력하세요"
                 android:textSize="14sp"
                 android:padding="5dp"
