--- a/app/src/main/res/layout/activity_find_pw_new.xml
+++ b/app/src/main/res/layout/activity_find_pw_new.xml
@@ -18,6 +18,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="120dp"
+            android:layout_marginTop="110dp"
             android:layout_marginHorizontal="120dp"
             app:srcCompat="@drawable/logo_image" />
 
@@ -30,7 +31,6 @@
             android:padding="20dp"
             android:orientation="vertical"
             android:gravity="center_horizontal">
-
 
             <TextView
                 android:id="@+id/textView9"
