--- a/app/src/main/res/layout/activity_local_sign_in.xml
+++ b/app/src/main/res/layout/activity_local_sign_in.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginHorizontal="120dp"
+            android:layout_marginTop="90dp"
             app:srcCompat="@drawable/logo_image" />
 
         <LinearLayout
@@ -27,7 +28,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginHorizontal="30dp"
-            android:padding="20dp"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="20dp"
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
