--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginHorizontal="120dp"
+            android:layout_marginTop="90dp"
             app:srcCompat="@drawable/logo_image" />
 
         <LinearLayout
@@ -27,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="380dp"
             android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
