--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="80dp"
-        android:layout_marginVertical="100dp"
+        android:layout_marginTop="100dp"
         app:srcCompat="@drawable/logo_image" />
 
     <TextView
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:paddingVertical="15dp"
         android:paddingHorizontal="100dp"
+        android:layout_marginTop="300dp"
         android:text="회원가입"
         android:textSize="15sp"
         android:textColor="@color/white"
