--- a/app/src/main/res/layout/fragment_main_mypage.xml
+++ b/app/src/main/res/layout/fragment_main_mypage.xml
@@ -30,21 +30,6 @@
         android:paddingHorizontal="40dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/mypageName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="guest"
-            android:textSize="10sp"
-            android:textColor="#000000"/>
-
-        <TextView
-            android:id="@+id/textView16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="님 환영합니다."
-            android:textSize="10sp"/>
-
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -66,12 +51,21 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/mypageImg"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="30dp"
         app:civ_border_overlay="true"
         app:civ_border_color="#000000"
         android:src="@drawable/guest" />
+
+    <TextView
+        android:id="@+id/mypageName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="guest"
+        android:textSize="21dp"
+        android:textStyle="bold"
+        android:textColor="#000000"/>
 
     <TextView
         android:id="@+id/profileUpdateBtn"
@@ -80,7 +74,7 @@
         android:layout_height="wrap_content"
         android:paddingVertical="3dp"
         android:paddingHorizontal="15dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:text="프로필 수정"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -93,7 +87,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:paddingHorizontal="50dp"
-        android:paddingVertical="20dp"
+        android:paddingVertical="40dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -124,7 +118,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -150,7 +144,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -176,7 +170,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -199,6 +193,4 @@
                 android:hint="몸무게" />
         </LinearLayout>
     </LinearLayout>
-
-
 </LinearLayout>
