--- a/app/src/main/res/layout/recommenlist_item.xml
+++ b/app/src/main/res/layout/recommenlist_item.xml
@@ -19,12 +19,21 @@
         android:layout_gravity="center_vertical"
         android:text="1" />
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/recommendImg"
         android:background="@drawable/shop_img"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginRight="100dp"/>
+        android:layout_marginRight="100dp"/>-->
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/recommendImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginRight="100dp"
+        app:civ_border_overlay="true"
+        app:civ_border_color="#000000"
+        android:src="@drawable/shop_img"/>
 
     <TextView
         android:id="@+id/recommendKrName"
