--- a/app/src/main/res/layout/fragment_main_mypage_update.xml
+++ b/app/src/main/res/layout/fragment_main_mypage_update.xml
@@ -23,6 +23,12 @@
         android:layout_marginTop="10dp"
         app:srcCompat="@drawable/line" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="임시" />
+
     <LinearLayout
         android:background="@drawable/my_info_form"
         android:layout_width="match_parent"
@@ -41,8 +47,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/mypageUimg"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="20dp"
                 app:civ_border_overlay="true"
                 app:civ_border_color="#000000"
@@ -55,10 +61,10 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="@+id/mypageUimg"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.87"
+                app:layout_constraintHorizontal_bias="0.9"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.87"
+                app:layout_constraintVertical_bias="0.9"
                 app:srcCompat="@drawable/plus_icon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
