--- a/app/src/main/res/layout/closetlist_item.xml
+++ b/app/src/main/res/layout/closetlist_item.xml
@@ -9,14 +9,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/list_bg">
+        android:paddingHorizontal="20dp"
+        android:background="@drawable/box">
 
         <ImageView
             android:id="@+id/closetItemImage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginRight="10dp"
             android:layout_marginVertical="3dp"
+            android:layout_gravity="center_vertical"
             app:srcCompat="@drawable/closet_img" />
 
         <LinearLayout
@@ -80,29 +82,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
+        android:layout_marginHorizontal="50dp"
         android:visibility="gone">
 
-        <TextView
+        <ImageView
             android:id="@+id/changeClosetItem"
-            android:background="@drawable/listitem_btn_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginLeft="20dp"
-            android:paddingVertical="10dp"
-            android:gravity="center"
-            android:text="변경" />
+            app:srcCompat="@drawable/update_btn" />
 
-        <TextView
+        <ImageView
             android:id="@+id/deleteClosetItem"
-            android:background="@drawable/listitem_btn_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingVertical="10dp"
-            android:layout_marginHorizontal="20dp"
-            android:gravity="center"
-            android:text="제거" />
+            app:srcCompat="@drawable/delete_btn" />
+
     </LinearLayout>
 
 </LinearLayout>
