--- a/app/src/main/res/layout/fragment_mypage_mycloset.xml
+++ b/app/src/main/res/layout/fragment_mypage_mycloset.xml
@@ -25,25 +25,27 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cRecyclerView"
-        android:layout_width="960px"
-        android:layout_height="900px"/>
+        android:layout_width="match_parent"
+        android:layout_height="500dp"/>
     <!-- 190 -->
 
     <LinearLayout
         android:id="@+id/addClosetItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/list_bg"
-        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/box"
+        android:paddingHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:visibility="gone">
 
         <ImageView
             android:id="@+id/addClosetItemImg"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginRight="10dp"
             android:layout_marginVertical="3dp"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center_vertical"
             app:srcCompat="@drawable/closet_img" />
 
         <LinearLayout
