--- a/app/src/main/res/layout/fragment_main_model.xml
+++ b/app/src/main/res/layout/fragment_main_model.xml
@@ -4,20 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:paddingHorizontal="20dp"
-    android:paddingTop="120dp"
+    android:paddingTop="90dp"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/storeContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/goStore"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                app:srcCompat="@drawable/closet_img" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="스토어 이동" />
+
+        </LinearLayout>
 
         <VideoView
             android:id="@+id/videoView"
             android:layout_width="224dp"
             android:layout_height="315dp"
+            android:layout_marginTop="20dp"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />
@@ -34,8 +56,8 @@
                 android:id="@+id/imageView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_gravity="center_vertical"
+                android:layout_weight="1"
                 app:srcCompat="@drawable/line" />
 
             <ImageView
@@ -52,6 +74,8 @@
                 android:layout_weight="1"
                 android:layout_gravity="center_vertical"
                 app:srcCompat="@drawable/line" />
+
+
         </LinearLayout>
 
     </LinearLayout>
@@ -59,16 +83,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="67dp"
         android:orientation="vertical">
+
+
+        <ImageView
+            android:id="@+id/mInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            app:srcCompat="@android:drawable/ic_menu_info_details" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tRecyclerView"
             android:background="@color/bg"
             android:layout_width="match_parent"
-            android:layout_height="315dp" >
-
-        </androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="315dp"
+            android:layout_marginTop="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
