--- a/app/src/main/res/drawable/list_bg.xml
+++ b/app/src/main/res/drawable/list_bg.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="#959595"/>
+                android:color="#DCDCDC"/>
         </shape>
     </item>
 
