--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -80,8 +80,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/filterRecyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="450dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="20dp"/>
 
 </LinearLayout>
