--- a/app/src/main/res/layout/fragment_main_cart_add.xml
+++ b/app/src/main/res/layout/fragment_main_cart_add.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:paddingBottom="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -16,7 +18,7 @@
         android:gravity="center_vertical">
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/addCartItemImg"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
@@ -24,47 +26,77 @@
 
             <EditText
                 android:id="@+id/addCartItemName"
-                android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:textSize="13sp"
-                android:inputType="textPersonName"
+                android:textSize="20sp"
+                android:layout_marginTop="60dp"
+                android:letterSpacing="-0.1"
                 android:hint="Shop 이름" />
 
             <EditText
                 android:id="@+id/addCartItemNote"
-                android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:ems="10"
-                android:textSize="13sp"
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                android:letterSpacing="-0.1"
                 android:inputType="textPersonName"
                 android:hint="설명" />
 
             <EditText
                 android:id="@+id/addCartItemPrice"
-                android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginTop="3dp"
-                android:textSize="13sp"
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                android:letterSpacing="-0.1"
                 android:inputType="number"
                 android:hint="가격" />
 
             <EditText
                 android:id="@+id/addCartItemUrl"
-                android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginTop="2dp"
-                android:textSize="13sp"
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                android:letterSpacing="-0.1"
                 android:inputType="textPersonName"
                 android:hint="URL" />
 
     </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/addItemBtnGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp">
+
+            <TextView
+                android:id="@+id/addSetBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:layout_marginRight="10dp"
+                android:text="저장"
+                android:letterSpacing="-0.1"
+                android:textColor="@color/black"
+                android:clickable="true"/>
+
+            <TextView
+                android:id="@+id/addCancelBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:text="취소"
+                android:letterSpacing="-0.1"
+                android:textColor="@color/black"
+                android:clickable="true"/>
+
+        </LinearLayout>
 
 </LinearLayout>
